<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="change_language">Language Setting</string>
    <string name="language_summary">Change your language settings</string>
    <string name="label_title">Title</string>
    <string name="language_code">en-US</string>
    <string name="detail_poster">Detail Poster</string>
    <string name="image_poster">Image Poster</string>
    <string name="empty_overview">No overview in your language</string>
    <string name="background_image">Background Image</string>
    <string name="rating">Rating</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_status">Favorite Status</string>
    <string name="success_favourite">Added to favourite</string>
    <string name="failed_favourite">Failed added to favourite</string>
    <string name="success_delete">Deleted from favourite</string>
    <string name="failed_delete">Failed delete from favourite</string>
    <string name="empty_movie_favourite">Favourite Movie is Empty</string>
    <string name="empty_show_favourite">Favourite Tv Show is Empty</string>
    <string name="movie_favourite">Favourite Movie</string>
    <string name="show_favourite">Favourite Tv Show</string>
    <string name="setting">Setting</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_show">Search Tv Show</string>
    <string name="key_daily">daily</string>
    <string name="key_release">release</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="daily_summary">Remind you to back to application</string>
    <string name="release_summary">Remind you the newest movie that released today</string>
    <string name="new_release">New Release</string>
    <string name="setup_daily">Daily Reminder setup</string>
    <string name="setup_release">Release Reminder setup</string>
    <string name="cancel_daily">Daily Reminder setup has cancelled</string>
    <string name="cancel_release">Release Reminder setup has cancelled</string>
    <string name="daily_message">We miss you, Lets back to MovieCatalogue!!</string>
    <string name="release_message">Today Released Movies</string>
    <string name="released_today">Are Released Today!!</string>
    <string name="new_notification">new notification</string>
    <string name="movie_released_today">Movie Are Released Today!!</string>
</resources>
